# ra-public

./: CMakeLists.txt
cmake/: FindGLM.cmake  Findassimp.cmake
env/: compute_fs.glsl  compute_gs.glsl  gradient_fs.glsl  gradient_vs.glsl  particles_fs.glsl  particles_gs.glsl  particles_vs.glsl  phong_fs.glsl  phong_vs.glsl  terrain.dae
include/glad/: glad.h
src/: main.cxx
src/glad/: glad.c
